--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    
+    <footer>
+      Challenge by  <a href="https://www.frontendmentor.io">Frontend Mentor</a>. Coded by <a href="#none">SG</a>.
+    </footer>
   </body>
 </html>
